Added extra config and tests